# LuckyMe

./: .gitignore  Anchor.toml  CODEX-FIX-ALINIERE-POOLURI-SI-WALLETCONNECT.md  CODEX-IMPLEMENTARE-KEEPER-SI-RECUPERARE-RENT.md  CODEX-IMPLEMENTARE-PRAGURI-MINIME-REFUND-SI-HOW-TO-PLAY.md  Cargo.toml  LUCKYME-MEGA-HANDOFF-2026-07-20.md  README.md  SECURITY.md  package-lock.json  package.json
app-admin/: App.tsx  README.md  app.json  package-lock.json  package.json
app-seeker/: App.tsx  README.md  app.config.js  app.json  eas.json  index.ts  package-lock.json  package.json  polyfill.ts  tsconfig.json
backend/: README.md
deploy/: referral-test-package.json
docs/: LUCKYME-STATUS-SI-PASI-REALI-2026-07-12.md  NAS-RECOVERY-MANIFEST-2026-07-20.md  RPC-FAILOVER-2026-07-21.md  admin-cnft-full-audit-2026-07-19.md  admin-live-entry-wallets-deployment-2026-07-14.md  admin-live-treasury-deployment-2026-07-14.md  admin-winner-archive-deployment-2026-07-14.md  apk-signing.md  audit-closure.md  deploy-checklist.md  devnet-checklist.md  disaster-recovery.md  discord-alerts-deployment-2026-07-15.md  final-readiness-audit.md  final-release-evidence.md  final-store-handoff-2026-07-08.md  handoff.md  incident-2026-07-11-idle-pools-rent-wallet.md  legal-risk.md  local-development.md  luckyme-platform-release-2026-07-23.md  luckyme-platform-release-2026-07-24.md  mainnet-keeper-rent-return-upgrade-plan-2026-07-13.md  mainnet-minimum-tickets-upgrade-approval-plan-2026-07-11.md  mainnet-readiness.md  (+38 more)
programs/luckyme/: Cargo.toml
programs/luckyme/src/: lib.rs  promotion_compact.rs
(+205 files in other folders)
