[package]
name = "luckyme"
version = "0.1.0"
description = "LuckyMe fixed-entry Solana luck pools"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "luckyme"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
test-short-timers = []

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
ephemeral-vrf-sdk = "0.4.1"
solana-sha256-hasher = "3.1.0"
